--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div id="form-page">
   <form id="login-form" class="form" (submit)="login()">
-    <h3 class="text-center">Register</h3>
+    <h3 class="text-center">Login</h3>
     <div class="input-group form-group">
       <span class="input-group-addon">Email</span>
       <input type="email" class="form-control" [(ngModel)]="user.email" name="Email"/>
